log
Sat, May 17, 2025  8:09:21 PM: 
 sudoku.c | 22 ++++++++++++++++++----
 1 file changed, 18 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:63:11: error: implicit declaration of function 'pushback' [-Werror=implicit-function-declaration]
           pushback(adj_list, new_node);
           ^~~~~~~~
test.c: At top level:
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:83:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Sat, May 17, 2025  8:10:10 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:83:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
31a219e
Sat, May 17, 2025  8:14:21 PM: 
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:83:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
2fa1df5
Sat, May 17, 2025  8:18:16 PM: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:83:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
0d355ff
Sat, May 17, 2025  8:22:27 PM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
1862554
Sat, May 17, 2025  9:01:10 PM: 
 sudoku.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
d7973d1
Sat, May 17, 2025  9:14:36 PM: 
 sudoku.c | 24 ++++++++++++++++++++----
 1 file changed, 20 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
704dec9
Sat, May 17, 2025  9:18:18 PM: 
 sudoku.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:57:22: error: passing argument 1 of 'reiniciar_vector' from incompatible pointer type [-Werror=incompatible-pointer-types]
     reiniciar_vector(&vector);
                      ^
sudoku.c:46:6: note: expected 'int *' but argument is of type 'int (*)[10]'
 void reiniciar_vector(int *vector){
      ^~~~~~~~~~~~~~~~
sudoku.c:68:22: error: passing argument 1 of 'reiniciar_vector' from incompatible pointer type [-Werror=incompatible-pointer-types]
     reiniciar_vector(&vector);
                      ^
sudoku.c:46:6: note: expected 'int *' but argument is of type 'int (*)[10]'
 void reiniciar_vector(int *vector){
      ^~~~~~~~~~~~~~~~
sudoku.c:79:22: error: passing argument 1 of 'reiniciar_vector' from incompatible pointer type [-Werror=incompatible-pointer-types]
     reiniciar_vector(&vector);
                      ^
sudoku.c:46:6: note: expected 'int *' but argument is of type 'int (*)[10]'
 void reiniciar_vector(int *vector){
      ^~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
ef2345a
Sat, May 17, 2025  9:19:21 PM: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
d2f6e7e
